--- a/client/src/components/Note/DashboardEvent/EventNote.module.css
+++ b/client/src/components/Note/DashboardEvent/EventNote.module.css
@@ -3,8 +3,19 @@
 .Segment {
     width: 300px;
     margin-bottom: 18px;
-    margin-left: 16px;
-    margin-right: 16px;
+}
+
+@media only screen and (max-width: 900px) {
+    .Segment {
+        width: 373px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .Segment {
+        width: auto;
+        min-width: 230px;
+    }
 }
 
 .headingContainer {
