--- a/client/src/components/Note/StandardDetail/StandardDetailNote.module.css
+++ b/client/src/components/Note/StandardDetail/StandardDetailNote.module.css
@@ -3,6 +3,12 @@
     width: 174px;
     flex-direction: column;
 }
+@media only screen and (max-width: 600px) {
+    .outerContainer {
+        width: auto;
+        min-width: 230px;
+    }
+}
 .pinContainer {
     display: flex;
     flex-direction: column;
