--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -45,11 +45,23 @@
 /* Container for the greeting, date, and link to all notes*/
 .mid {
     display: flex;
-    width: 73%;
     margin-top: 10%;
     align-items: stretch;
     flex-direction: row;
     align-content: top;
+    justify-content: space-between;
+}
+
+@media only screen and (min-width: 1150px) {
+    .mid {
+        width: 70vw;
+    }
+}
+
+@media only screen and (min-width: 1150px) {
+    .mid {
+        width: 45vw;
+    }
 }
 
 /* Container for the Icons for calendar and notes*/
@@ -136,20 +148,18 @@
 
 @media only screen and (max-width: 550px) {
     .viewAllNotesContainer {
+        width: 0px;
         visibility: hidden;
     }
 }
 
 .viewNotesContainer {
     display: flex;
-    width: 100%;
     flex-direction: row-reverse;
     align-items: center;
-    margin-right: 4%;
 }
 
 .greetingsContainer {
-    width: 62%;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -157,6 +167,10 @@
 }
 
 .main {
+    width: 80%;
+}
+
+.body {
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -171,6 +185,7 @@
 
 @media only screen and (max-width: 550px) {
     .greeting {
+        width: 220px;
         font-size: 30px;
     }
 }
