--- a/client/src/views/NotesView/MenuBar/Menu.module.css
+++ b/client/src/views/NotesView/MenuBar/Menu.module.css
@@ -2,7 +2,6 @@
 
 .containerLeft {
     display: flex;
-    width: 22%;
     flex-direction: column;
     align-items: flex-start;
     font-family: "Lato", sans-serif;
@@ -12,7 +11,6 @@
 .sideContainer {
     display: flex;
     height: 80vh;
-    width: 15vw;
     padding-top: 3.6vh;
     flex-direction: column;
     align-items: center;
@@ -29,11 +27,28 @@
 .menu {
     display: flex;
     flex-direction: column;
-    width: 15vw;
+    width: 150px;
     padding-top: 10px;
     padding-left: 20px;
     align-items: left;
     margin-bottom: 10px;
+}
+
+.menuItem {
+    font-size: 16px;
+}
+
+@media only screen and (max-width: 600px) {
+    .icon {
+        padding-left: 10px;
+    }
+    .menu {
+        width: 75px;
+        padding-left: 2px;
+    }
+    .menuItem {
+        font-size: 14px;
+    }
 }
 
 .input {
@@ -58,4 +73,10 @@
     display: flex;
     width: 100%;
     align-items: flex-start;
+}
+
+@media only screen and (max-width: 600px) {
+    .settings {
+        margin-left: 10px;
+    }
 }
