--- a/client/src/views/LogInView/LogInView.module.css
+++ b/client/src/views/LogInView/LogInView.module.css
@@ -21,7 +21,7 @@
 .subtitle {
     margin-top: 4%;
     font-family: "Lato", sans-serif;
-    font-size: 1.6vw;
+    font-size: 15px;
 }
 
 .inputTitle {
@@ -43,4 +43,24 @@
     display: flex;
     margin-top: 15%;
     justify-content: space-between;
+}
+
+@media only screen and (max-width: 700px) {
+    .logo {
+        margin-top: 20%;
+        max-width: 20%;
+        height: auto;
+    }
+    .title {
+        font-size: 50px;
+        margin: 20px;
+    }
+}
+
+@media only screen and (min-width: 1600px) {
+    .logo {
+        margin-top: 5%;
+        max-width: 10%;
+        height: auto;
+    }
 }
