--- a/client/src/views/RegisterView/RegisterView.module.css
+++ b/client/src/views/RegisterView/RegisterView.module.css
@@ -21,7 +21,7 @@
 .subtitle {
     margin-top: 4%;
     font-family: "Lato", sans-serif;
-    font-size: 1.6vw;
+    font-size: 15px;
 }
 
 .inputTitle {
@@ -36,11 +36,36 @@
     margin-top: 2%;
     min-height: 10%;
     min-width: 19%;
+    max-width: 70%;
     width: inherit;
 }
 
 .buttons {
     display: flex;
     margin-top: 15%;
+    margin-bottom: 15%;
     justify-content: space-between;
+}
+
+@media only screen and (max-width: 700px) {
+    .inputSection {
+        margin-top: 20px;
+    }
+    .logo {
+        margin-top: 5%;
+        max-width: 20%;
+        height: auto;
+    }
+    .title {
+        font-size: 50px;
+        margin: 20px;
+    }
+}
+
+@media only screen and (min-width: 1600px) {
+    .logo {
+        margin-top: 5%;
+        max-width: 10%;
+        height: auto;
+    }
 }
