feat: add dynamic colour scheme functions

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -87,6 +87,7 @@ and then centres what we put in it */
     width: 100vw;
     max-width: 100vw;
     padding: 0.5rem;
+    background-color: var(--background);
 }
 
 .containerHorizontal,
