--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -34,6 +34,8 @@
 .noNotes {
     font-family: "Lato", sans-serif;
     font-size: 17px;
+    min-width: 300px;
+    margin-bottom: 50px;
     color: #707070;
     display: flex;
     flex-direction: row;
@@ -77,6 +79,9 @@
 }
 
 @media only screen and (max-width: 900px) {
+    .noNotes {
+        min-width: none;
+    }
     .bottom {
         flex-direction: column;
     }
