--- a/client/src/views/NotesView/DnD/dragAndDrop.module.css
+++ b/client/src/views/NotesView/DnD/dragAndDrop.module.css
@@ -91,5 +91,6 @@
     display: flex;
     flex-direction: row;
     width: 98%;
-    margin-top: 50px;
+    margin-top: 60px;
+    margin-left: 20px;
 }
