--- a/client/src/views/LogInView/LogInView.module.css
+++ b/client/src/views/LogInView/LogInView.module.css
@@ -21,7 +21,7 @@
 .subtitle {
     margin-top: 4%;
     font-family: "Lato", sans-serif;
-    font-size: 15px;
+    font-size: 20px;
 }
 
 .inputTitle {
@@ -49,6 +49,9 @@
     .inputSection {
         min-width: 30%;
     }
+    .subtitle {
+        font-size: 15px;
+    }
 }
 
 @media only screen and (max-width: 700px) {
@@ -75,7 +78,15 @@
 @media only screen and (min-width: 1600px) {
     .logo {
         margin-top: 5%;
-        max-width: 10%;
+        max-width: 7%;
         height: auto;
+    }
+    .title {
+        font-size: 60px;
+        margin: 20px;
+    }
+    .subtitle {
+        margin-top: 40px;
+        font-size: 23px;
     }
 }
