fix: extend background colour to whole page

--- a/client/src/views/SettingsView/ColourBlocks.module.css
+++ b/client/src/views/SettingsView/ColourBlocks.module.css
@@ -49,3 +49,9 @@
 .checkbox {
     display: flex;
 }
+
+@media only screen and (max-width: 600px) {
+    .blocks {
+        grid-template-columns: 80%;
+    }
+}
