--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -83,11 +83,18 @@
 /* This container basically holds the whole page 
 and then centres what we put in it */
 .pageContainer {
-    height: 100vh;
     width: 100vw;
     max-width: 100vw;
+    height: 100vh;
     padding: 0.5rem;
     background-color: var(--background);
+    overflow-y: auto;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+.pageContainer::-webkit-scrollbar {
+    display: none;
 }
 
 .containerHorizontal,
