--- a/client/src/views/NotesView/NotesView.module.css
+++ b/client/src/views/NotesView/NotesView.module.css
@@ -3,7 +3,6 @@
 .container {
     display: flex;
     flex-direction: column;
-    height: 95vh;
 }
 
 .header {
@@ -43,7 +42,7 @@
     flex-direction: column;
     align-items: flex-end;
     width: 100%;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 
 .notes {
